# tiktok-uploader-cdp

./: .gitignore  README.md  pyproject.toml
.agents/skills/tiktok-uploader-cdp-openclaw/: SKILL.md
.agents/skills/tiktok-uploader-cdp-openclaw/agents/: openai.yaml
docs/: cli-reference.md  config-reference.md  error-codes.md  json-schema.md  openclaw-integration.md  request-contract.md  runbook.md  team-upload-reply-2026-04-03-1050.md  team-upload-report-2026-04-03.md  upload-scenarios.md
docs/full-system/: 00-index.md  01-component-map.md  02-runtime-sequence.md  03-step-connect-and-navigation.md  04-step-attach-video.md  05-step-interactivity-visibility-description.md  06-step-cover-schedule.md  07-step-post-and-content-modal.md  08-error-handling-and-retry.md  09-debug-protocol.md  10-maintenance-checklist.md  11-mermaid-flows.md
scripts/: check_cdp.sh  dump_selectors_dom.js  run_dry_run_example.sh  run_publish_example.sh  selector_probe_console_snippet.js
src/tiktok_uploader_cdp/: __init__.py  cli.py  config.toml
src/tiktok_uploader_cdp/app/: uploader.py
src/tiktok_uploader_cdp/domain/: errors.py  models.py
src/tiktok_uploader_cdp/infra/: cdp.py  detectors.py  page_ops.py  runtime_config.py  selectors.py
tests/: test_uploader_errors.py
