[project]
name = "tiktok-uploader-cdp"
version = "0.1.0"
description = "TikTok uploader via existing logged-in browser over CDP, designed for OpenClaw automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.55.0",
]

[project.scripts]
tiktok-uploader-cdp = "tiktok_uploader_cdp.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
